<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RenameDocument">
    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/enter_new_name"
                    android:textSize="16sp"></TextView>
            </TableRow>

            <EditText
                android:id="@+id/cols_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:hint="@string/new_name"
                android:inputType="textCapSentences"
                android:background="@drawable/corners"
                android:text=""
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:textSize="15sp"
                android:backgroundTint="#C8C8C8"></EditText>
        </TableLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:id="@+id/relativeLayout4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/corners"
            android:text="@string/save"
            android:textColor="#ffffff"
            android:textSize="14sp"></Button>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>